objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACV_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACV_Dealer_Id__c</fullName>
        <description>External ID for dealer to which contact is associated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV_Dealer_Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACV_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACV User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <description>Billing city of the contacts associated account , used to be able to surface info in email merge fields from campaigns</description>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing city of the contacts associated account</inlineHelpText>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <description>Billing state of the contacts associated account , used to be able to surface info in email merge fields from campaigns</description>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing state of the contacts associated account</inlineHelpText>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dealer_Type__c</fullName>
        <description>Dealer Type from Account for Reporting and List View use</description>
        <formula>IF(ISPICKVAL(Account.Dealer_Type__c, &apos;1&apos;), &apos;Franchise&apos;, IF(
ISPICKVAL(Account.Dealer_Type__c, &apos;2&apos;), &apos;Independent&apos;, IF(ISPICKVAL(Account.Dealer_Type__c, &apos;4&apos;), &apos;Independent - ACV Certified&apos;, IF(ISPICKVAL(Account.Dealer_Type__c,&apos;3&apos;), &apos;Wholesaler&apos;, IF(ISPICKVAL(Account.Dealer_Type__c, &apos;Dealer Group (Parent Account)&apos;), &apos;Dealer Group (Parent Account)&apos;,IF(ISPICKVAL(Account.Dealer_Type__c, &apos;5&apos;), &apos;Commercial&apos;, null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_TM__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp;  Account.Owner.LastName</formula>
        <label>Account Owner (TM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Owner_ID__c</fullName>
        <formula>Account.Acct_Owner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Time_Purchases__c</fullName>
        <description>Pulls the value from the All Time Purchases field on Account</description>
        <formula>Account.Purchases_All_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Sells__c</fullName>
        <description>Pulls the All Time Sales value from the Account</description>
        <formula>Account.All_Time_Sales_Gross__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Sells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Unit_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Annual Unit Sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Inc_Id__c</fullName>
        <description>Auto Number used to generate Integers for Contact Unique IDs</description>
        <externalId>true</externalId>
        <label>Auto Inc Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CR_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__WatchDOGResult__c</fullName>
        <label>WatchDOG Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Potential Match</fullName>
                </value>
                <value>
                    <fullName>True Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Guid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Source__c</fullName>
        <description>Field indicating how this record was created, used to filter records created through bulk creation processes to avoid mass email send outs</description>
        <label>Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Load</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_Dealer_Became_Compliant__c</fullName>
        <description>Pulls the value from Date Time Compliant field on Account</description>
        <formula>Account.Date_Time_Compliant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date and Time Dealer Became Compliant</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Purchase__c</fullName>
        <description>Pulls the Date of First Purchase value from the Account</description>
        <formula>Account.Date_of_First_Buy__c</formula>
        <label>Date of First Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Purchase__c</fullName>
        <description>Pulls the value from the Date of Last Purchase field from Account</description>
        <formula>Account.Date_of_Last_Purchase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_Sale__c</fullName>
        <description>Date of last sale from related account</description>
        <formula>Account.Date_of_Last_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of last sale from related account</inlineHelpText>
        <label>Date of Last Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastActivity__c</fullName>
        <formula>TODAY() - DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealership_Contact_Id__c</fullName>
        <description>Indicates the unique Dealership Contact Id for this Contact record. This field will be populated only for the Dealership Contact Record types</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Dealership Contact Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DelightedInc__Last_Delighted_Response_Score__c</fullName>
        <label>Last Delighted Response Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Dealership_Member_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Direct Dealership Member Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Categories__c</fullName>
        <description>Field indicating which email updates this user has opted out of receiving</description>
        <inlineHelpText>This field indicates which email updates this user has opted out of receiving</inlineHelpText>
        <label>Email Opt Out Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>orgUpdates</fullName>
                    <label>Organization Updates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Historical_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this record was part of a historical load</description>
        <label>From Historical Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geocode_Quality__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geocode Quality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geopointe_LatLong__c</fullName>
        <label>Geopointe LatLong</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>HOT_NOTES__c</fullName>
        <description>I.E NEXT GEAR, KNOWS TIM ETC</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HOT NOTES</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Used by Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACV Contact ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IST_Account_Manager_Email__c</fullName>
        <description>Email of the IST Account Manager</description>
        <formula>Account.IST_Account_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager__c</fullName>
        <formula>Account.IST_Account_Owner__r.FirstName + &quot; &quot; + Account.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Discovery_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IST Discovery Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IST_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IST Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Todays_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IST Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identity_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Identity Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Contact User is ACV Staff</description>
        <label>Is Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Superuser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates that this ACV user has all ACV App permissions without explicitly assigning them</description>
        <label>Is Superuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joined__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Geocode_Run__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Geocode Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Convert_Status__c</fullName>
        <formula>TEXT(Account.Lead_Convert_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Convert Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if this Contact was created from a Lead</description>
        <label>Lead Created Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_in_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Linked in Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MTD_Purchases__c</fullName>
        <description>Pulls the value from the MTD Purchases field on Account</description>
        <formula>Account.MTD_Purchases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MVP Accounts</description>
        <label>MVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NGDealerNumber__c</fullName>
        <description>Dealer number for Next Gear</description>
        <label>NG Dealer #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Longer_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Contact is no longer at the Dealer</inlineHelpText>
        <label>No Longer Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <description>Number of dealership locations</description>
        <label># of Locations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Carrier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Email_Status__c</fullName>
        <description>This field is used for scheduling policy email with a delay.</description>
        <label>Policy Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Policy Email Not Sent</fullName>
                </value>
                <value>
                    <fullName>Send Policy Email</fullName>
                </value>
                <value>
                    <fullName>Policy Email Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialMonthlyBuyVolume__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Monthly Buy Volume</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Type__c</fullName>
        <label>Prescreen Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>Promo code used when the user signed up, this is populated via the Identity services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Promo_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this contact receive sales promotion messaging (via text, push notification, email, etc..)?</description>
        <label>Receive Promos?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>VCI</fullName>
                </value>
                <value>
                    <fullName>readonly</fullName>
                    <label>Read Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates the Contact has agreed to receive marketing-based SMS text messages from ACV.</description>
        <inlineHelpText>True indicates the Contact has agreed to receive marketing-based SMS text messages from ACV.</inlineHelpText>
        <label>SMS Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successful_Virtual_Lift_Prescreens__c</fullName>
        <label>Successful Virtual Lift Prescreens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Account.Maps_Sales_Territory_Name__c</formula>
        <inlineHelpText>Territory from the Account the Contact is Associated With. Read Only Field</inlineHelpText>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Picklist__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Title Clerk</fullName>
                </value>
                <value>
                    <fullName>Used Car Manager</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Selling Rep</fullName>
                </value>
                <value>
                    <fullName>Buying Rep</fullName>
                </value>
                <value>
                    <fullName>Transport Manager</fullName>
                </value>
                <value>
                    <fullName>TrueFrame Billing Contact</fullName>
                </value>
                <value>
                    <fullName>TF Report Contact</fullName>
                </value>
                <value>
                    <fullName>Lotsweep Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Primary_Contact__c</fullName>
        <description>Field is checked if the Primary transpo contact on the related account is this contact</description>
        <formula>If(
 Account.Transportation_Primary_Contact__c ==  Id,
true,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This flag is checked if it is the Transportation Primary Contact on its Account</inlineHelpText>
        <label>Transportation Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Radius__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Travel Radius</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VCI_CR_Counter__c</fullName>
        <label>VCI CR Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Lift_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Lift Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Create_Date__c</fullName>
        <description>Alyce Most Recent Gift Invitation Create Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alyce Most Recent Gift Invitation Create Date</inlineHelpText>
        <label>Most Recent Gift Invitation Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Gift_Name__c</fullName>
        <description>Alyce Most Recent Gift Invitation Gift Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alyce Most Recent Gift Invitation Gift Name</inlineHelpText>
        <label>Most Recent Gift Invitation Gift Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Sent_Date__c</fullName>
        <description>Alyce Most Recent Gift Invitation Sent Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alyce Most Recent Gift Invitation Sent Date</inlineHelpText>
        <label>Most Recent Gift Invitation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Status__c</fullName>
        <description>Alyce Most Recent Gift Invitation Status</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alyce Most Recent Gift Invitation Status</inlineHelpText>
        <label>Most Recent Gift Invitation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Landing_Page__c</fullName>
        <description>Alyce Most Recent Gift Invitation Recipient Landing Page</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alyce Most Recent Gift Invitation Recipient Landing Page</inlineHelpText>
        <label>Most Recent Gift Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <description>Phone field for this dealership. Similar to standard phone field, except this field&apos;s type is Text instead of Phone to allow for phone #s that are not formatted properly.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>xPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>HOT_NOTES__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Liz_Matya</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.IST_Owner_Name__c</field>
            <operation>equals</operation>
            <value>Lizz Matyas</value>
        </filters>
        <label>All Contacts - Liz Matya</label>
    </listViews>
    <listViews>
        <fullName>All_independents</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.Active_ACV_Capital_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All independents</label>
    </listViews>
    <listViews>
        <fullName>All_independents_for_Run_List_Sends</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.IST_Owner_Name__c</field>
            <operation>equals</operation>
            <value>Phil Stasiak</value>
        </filters>
        <label>Independents - Phil Stasiak</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Independents_Joe_Hacherl</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.IST_Owner_Name__c</field>
            <operation>equals</operation>
            <value>Joe Hacherl</value>
        </filters>
        <label>Independents - Joe Hacherl</label>
    </listViews>
</CustomObject>